<resources>
    <string name="app_name">HealthChain</string>
    <string name="app_intro">All Your Records In One Place</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="forget_password">Forget password?</string>
    <string name="dont_have_account">Don"\'"t Have An Account?</string>
    <string name="title_activity_main">MainActivity</string>
</resources>
