<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context="com.mohamedhashim.healthchain.SplashActivity">

    <ImageView
        android:layout_width="102.3dp"
        android:layout_height="91.7dp"
        android:layout_marginLeft="116dp"
        android:layout_marginRight="116dp"
        android:layout_marginTop="74.7dp"
        android:src="@drawable/ic_logo" />

    <TextView
        android:id="@+id/tv_app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="33.3sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        android:paddingEnd="45dp"
        android:paddingStart="45dp">

        <EditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/grey"
            android:drawableEnd="@color/grey"
            android:drawablePadding="@dimen/button_drawable_padding"
            android:drawableStart="@drawable/ic_email"
            android:drawableTint="@color/grey"
            android:hint="@string/email_address"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:textColor="@color/grey"
            android:textColorHint="@color/grey" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:backgroundTint="@color/grey"
                android:drawableEnd="@color/grey"
                android:drawablePadding="@dimen/button_drawable_padding"
                android:drawableStart="@drawable/ic_lock"
                android:hint="@string/password"
                android:imeActionLabel="@string/login"
                android:imeOptions="actionGo"
                android:inputType="textPassword"
                android:maxLines="1"
                android:textColor="@color/grey"
                android:textColorHint="@color/grey">

                <requestFocus />
            </EditText>

            <TextView
                android:id="@+id/prefix"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right|bottom"
                android:layout_marginBottom="10dp"
                android:text="@string/forget_password"
                android:textColor="@color/grey" />
        </FrameLayout>

    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="27dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="50dp">

        <br.com.simplepass.loading_button_lib.customViews.CircularProgressImageButton
            android:id="@+id/btn_login"
            android:layout_width="195.3dp"
            android:layout_height="33.3dp"
            android:layout_gravity="center_horizontal|center_vertical"
            android:background="@drawable/btn_login_design"
            android:clipToPadding="false"
            android:elevation="2dp"
            android:padding="15dp"
            android:text="@string/login"
            app:spinning_bar_color="@color/grey"
            app:spinning_bar_padding="10dp"
            app:spinning_bar_width="1dp" />

        <TextView
            android:id="@+id/tv_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:clickable="false"
            android:text="@string/login"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="23sp" />
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:layout_marginTop="100dp"
        android:gravity="center|bottom">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:text="@string/dont_have_account"
            android:textColor="@color/white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textColor="@color/white" />
    </LinearLayout>

</LinearLayout>
